Fix z-index-problem with loading cards

--- a/css/_object.card.css
+++ b/css/_object.card.css
@@ -28,6 +28,7 @@
 
 .card.loading:before {
   opacity: 1;
+  z-index: 1;
 }
 
 .card__header {
